[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pgamit"
dynamic = ["version", "keywords"]
description = "A Python wrapper to parallelize GAMIT executions"
authors = [
  { name = "Demi치n D. G칩mez", email = "demiang@gmail.com"},
]
maintainers = [
  { name = "Demi치n D. G칩mez", email = "demiang@gmail.com"},
  { name = "Shane Grigsby (espg)", email = "refuge@rocktalus.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "tqdm==4.66.5",
    "dispy",
    "psycopg2-binary==2.9.9",
    "pycos",
    "country-converter",
    "earthscope-cli==0.8.2",
    "earthscope-sdk==0.2.0",
    "basemap==1.4.0",
    "cryptography==44.0.1",
    "dirsync>=2.2.4",
    "geopy==2.4.1",
    #h5py==3.4.0
    #hdf5storage>=0.1.18
    "usgs-libcomcat",
    "matplotlib>=2.0.0",
    "munch==2.5.0",
    "netifaces==0.10.9",
    "networkx",
    "paramiko==3.4.0",
    "psutil>=5.6.3",
    "pysftp==0.2.9",
    "requests==2.32.4",
    "scandir>=1.6",
    "scikit-learn>=1.1",
    "scipy>=1.2.0",
    "simplekml==1.3.6",
    "xmltodict==0.13.0",
    "scikit-image",
    "shapely",
    "obspy"
]

[project.urls]
"Homepage" = "https://github.com/demiangomez/Parallel.GAMIT"
"Bug Tracker" = "https://github.com/demiangomez/Parallel.GAMIT/issues"

[tool.setuptools]
packages = ["pgamit"]

[tool.setuptools_scm]
