[metadata]
name             = pgamit
description_file = README.md
license_files    = LICENSE
home_page        = https://github.com/demiangomez/Parallel.GAMIT
author           = Demián D. Gómez
author_email     = demiang@gmail.com
version          = 1.2.2
description      = A Python wrapper to parallelize GAMIT executions
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = GAMIT
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.7
install_requires =
	numpy
    tqdm==4.66.5
    dispy
    psycopg2==2.9.9
    pycos
    country-converter
    earthscope-cli==0.8.2
    earthscope-sdk==0.2.0
    basemap==1.4.0
    cryptography==37.0.4
    dirsync>=2.2.4
    geopy==2.4.1
    #h5py==3.4.0
    #hdf5storage>=0.1.18
    usgs-libcomcat
    matplotlib>=2.0.0
    munch==2.5.0
    netifaces==0.10.9
    networkx
    paramiko==3.4.0
    psutil>=5.6.3
    pysftp==0.2.9
    requests==2.28.2
    scandir>=1.6
    scikit-learn
    scipy>=1.2.0
    simplekml==1.3.1
    xmltodict==0.13.0
