[metadata]
name             = pgamit
description_file = README.md
license_files    = LICENSE
home_page        = https://github.com/demiangomez/Parallel.GAMIT
author           = Demián D. Gómez
author_email     = demiang@gmail.com
version          = 2.2.2
description      = A Python wrapper to parallelize GAMIT executions
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = GAMIT
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  = >= 3.10,
install_requires =
	numpy >= 1.19.5
