[metadata]
name             = pgamit
description_file = README.md
license_files    = LICENSE
home_page        = https://github.com/demiangomez/Parallel.GAMIT
author           = Demián D. Gómez
author_email     = demiang@gmail.com
description      = A Python wrapper to parallelize GAMIT executions
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = GAMIT

python_requires = >= 3.10
